--- a/style.css
+++ b/style.css
@@ -138,4 +138,30 @@ footer {
   .item {
     border: 1px solid gray;
   }
+
+  .section-title {
+    text-align: center;
+    color: #fff;
+    position: relative;
+    margin-bottom: 40px;
+  }
+
+  
+
+  .freq {
+    width:80%;
+    text-align: center;
+    margin: 30px auto;
+
+  }
+
+  .freq details{
+    background-color: #6b4636;
+    text-align: start;
+    padding: 20px;
+    margin-bottom: 10px;
+    cursor: pointer;
+  }
+  
+  
   
